--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
          href="https://fonts.googleapis.com/icon?family=Material+Icons"
       />
 
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js
+      "
+      />
       <title>NH</title>
    </head>
    <body>
