--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
          href="https://fonts.googleapis.com/icon?family=Material+Icons"
       />
 
-      <link
+      <!-- <link
          rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js
       "
-      />
+      /> -->
       <link
          rel="stylesheet"
          type="text/css"
